// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`checkDuplicateNodes should throw on duplicate AST nodes within different parent 1`] = `
"Do not reuse nodes. Use \`t.cloneNode\` (or \`t.clone\`/\`t.cloneDeep\` if using babel@6) to copy them.
{
  \\"type\\": \\"Identifier\\",
  \\"name\\": \\"ref\\"
}
Parent:
[
  {
    \\"type\\": \\"VariableDeclarator\\",
    \\"id\\": {
      \\"type\\": \\"Identifier\\",
      \\"name\\": \\"ref\\"
    },
    \\"init\\": null
  },
  {
    \\"type\\": \\"AssignmentExpression\\",
    \\"operator\\": \\"=\\",
    \\"left\\": {
      \\"type\\": \\"Identifier\\",
      \\"name\\": \\"ref\\"
    },
    \\"right\\": {
      \\"type\\": \\"NullLiteral\\"
    }
  }
]"
`;

exports[`checkDuplicateNodes should throw on duplicate AST nodes within same parent 1`] = `
"Do not reuse nodes. Use \`t.cloneNode\` (or \`t.clone\`/\`t.cloneDeep\` if using babel@6) to copy them.
{
  \\"type\\": \\"Identifier\\",
  \\"name\\": \\"ref\\"
}
Parent:
[
  {
    \\"type\\": \\"VariableDeclarator\\",
    \\"id\\": {
      \\"type\\": \\"Identifier\\",
      \\"name\\": \\"ref\\"
    },
    \\"init\\": {
      \\"type\\": \\"Identifier\\",
      \\"name\\": \\"ref\\"
    }
  },
  {
    \\"type\\": \\"VariableDeclarator\\",
    \\"id\\": {
      \\"type\\": \\"Identifier\\",
      \\"name\\": \\"ref\\"
    },
    \\"init\\": {
      \\"type\\": \\"Identifier\\",
      \\"name\\": \\"ref\\"
    }
  }
]"
`;
